# natural-language-sql

./: .env.example  .gitignore  BENCHMARKS.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_TUNNEL.md  OPTIMIZATIONS_V1.3.md  PHASE2_CONTEXT.md  PRIVACY.md  PROJECT_ARCHITECTURE.md  PROJECT_BLUEPRINT.html  PROJECT_FLOW_EXPLAINED.md  README.md  docker-compose.yml  install.sh  plan.md  pytest.ini  quickstart.sh  requirements.txt  run.sh  skills-lock.json  test_multi_db.py  test_queries.md  verify_implementation.py
.claude/: settings.local.json
.goose/skills/: neobrutalism-components-skill
app/: config.py  dependencies.py  exceptions.py  main.py
app/middleware/: rate_limiter.py
app/models/: database.py  query.py
benchmarks/: README.md  exec_match.py  schema_loader.py  spider_eval.py
connector/: INSTALL.md  README.md  pyproject.toml  requirements.txt  run.py
connector/nlsql_connector/: __init__.py  discoverer.py  main.py  tunnel.py
frontend/: README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
scripts/: init_postgres.sql  migrate_encrypt_passwords.py  seed_mysql.sh  seed_postgres.sh
tests/: conftest.py  test_config.py  test_exceptions.py  test_log_redaction.py  test_ollama_url_override.py  test_prompts.py  test_provider_resolution.py  test_query_error_humanizer.py  test_query_self_correction.py  test_query_stream.py  test_sanitizer.py  test_schema_inspector_hybrid.py  test_self_correction.py  test_settings_endpoint.py  test_sql_generator.py  test_sql_generator_hybrid.py  test_sql_generator_ollama_url.py  test_validator.py
(+127 files in other folders)
